MainActivity and TVShowsListViewModel working, polish pending.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,15 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-  <jdls.one.recipes.widget.empty.EmptyView
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:scrollbars="none"
+    android:visibility="gone"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+  <jdls.one.showmethemovies.widget.empty.EmptyView
     android:id="@+id/viewEmpty"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
